Issue #13093: Fix error handling on PyUnicode_EncodeDecimal()

* Add tests for PyUnicode_EncodeDecimal() and PyUnicode_TransformDecimalToASCII()
 * Remove the unused "e" variable in replace()